youtrack/youtrack.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: youtrack
  namespace: youtrack
  labels:
    app: youtrack
spec:
  serviceName: youtrack
  replicas: 1
  selector:
    matchLabels:
      app: youtrack
  template:
    metadata:
      labels:
        app: youtrack
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      terminationGracePeriodSeconds: 60
      containers:
      - name: youtrack
        image: jetbrains/youtrack:2026.1.13757
        imagePullPolicy: Always
        ports:
        - name: container-port
          containerPort: 8080
        volumeMounts:
        - name: data
          mountPath: /opt/youtrack/data
        - name: conf
          mountPath: /opt/youtrack/conf
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: longhorn
      resources:
        requests:
          storage: 64Gi
  - metadata:
      name: conf
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: longhorn
      resources:
        requests:
          storage: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: youtrack
  namespace: youtrack
  labels:
    app: youtrack
spec:
  type: ClusterIP
  selector:
    app: youtrack
  ports:
  - name: service-port
    port: 80
    targetPort: container-port
