youtrack/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: youtrack
  namespace: youtrack
spec:
  tls:
  - hosts:
    - youtrack.k88936.top
    secretName: youtrack-tls
  rules:
  - host: youtrack.k88936.top
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: youtrack
            port:
              name: http
